--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -1,38 +1,43 @@
-.App {
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+h1 {
+  color: orange;
+  font-style: italic;
+}
+
+h2 {
+  margin-bottom: 0;
+  font-style: italic;
+  font-weight: lighter;
+  font-family: garamond;
+  font-size: 30px;
+}
+
+h3 {
+  width: 100%;
+  font-size: 28px;
+  font-style: italic;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h4 {
+  font-size: 20px;
+  margin-bottom: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h5 {
+  font-size: 18px;
+  margin: 0;
+  border-bottom: 2px solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  border: none;
+  background-color: orange;
+  color: black;
+  border-radius: 6px;
+  cursor: pointer;
 }
